--- a/package.json
+++ b/package.json
@@ -10,22 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "connect-flash": "^0.1.1",
-    "connect-pg-simple": "^9.0.1",
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "express-messages": "^1.0.1",
-    "express-session": "^1.18.0",
-    "express-validator": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
     "pg": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
-  }
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
