--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,20 @@
 {
     "sqltools.connections": [
+        
         {
             "pgOptions": {
-                "ssl": true
+                "ssl": {
+                    "rejectUnauthorized": true
+                }
             },
             "previewLimit": 50,
             "server": "dpg-cnkh8gv109ks73d1s5pg-a.oregon-postgres.render.com",
-            "port": 5432,
             "driver": "PostgreSQL",
             "name": "CSE-Motors-DB",
             "database": "csemotorsdb_8gig",
             "username": "cse340",
-            "password": "ZNwM5EIxDadquNLudjAKjLiDR4igrgRZ"
+            "password": "ZNwM5EIxDadquNLudjAKjLiDR4igrgRZ",
+            "connectString": "postgresql://byui_cse340_user:HrggFRjNQY8kih6BiK9vrP74m5wBeOng@dpg-crq5vulsvqrc73cqe470-a.oregon-postgres.render.com/byui_cse340"
         }
     ]
 }
